@@ -608,3 +608,110 @@ LOOP [28] {
 }
 
 MAZEWALK:(4, 2), south
+
+#Weeping angels
+
+LEVEL:"bigrm-12"
+FLAGS:mazelevel,hardfloor,noflip
+INIT_MAP:solidfill,' '
+GEOMETRY:center,center
+MAP
+---------------------------------------------------------------------------
+|................|...F.|..................................................|
+|................--.----..................................................|
+|...FFF...........|.|...............................................FFF...|
+|...F.F...........|S|...............................................F.F...|
+|...FFF.............................................................FFF...|
+|.........................................................................|
+|.........................................................................|
+|.........................................................................|
+|.........................................................................|
+|.........................................................................|
+|...........................................------S---....................|
+|...FFF............-S-......................|........|..............FFF...|
+|...F.F............|.|......................|FFFFFFFF|..............F.F...|
+|...FFF............|S|......................|........|..............FFF...|
+|..................|.|......................|........S....................|
+|..................|.|......................|........|....................|
+---------------------------------------------------------------------------
+ENDMAP
+# Dungeon Description
+REGION:(01,01,73,16),lit,"ordinary"
+MESSAGE: "You feel very nervous about turning your back."
+# Stairs
+STAIR:(47,03),up
+STAIR:(20,16),down
+# Non diggable walls
+NON_DIGGABLE:(00,00,74,17)
+
+#Weeping angels
+MONSTER: ('A',"weeping angel"),(05,04),hostile
+MONSTER: ('A',"weeping angel"),(69,04),hostile
+MONSTER: ('A',"weeping angel"),(05,13),hostile
+MONSTER: ('A',"weeping angel"),(69,13),hostile
+MONSTER: ('A',"weeping angel"),(22,01),hostile,"Angel Bob"
+MONSTER: ('A',"weeping angel"),(20,15),hostile
+
+#Statues (or are they?)
+$angeltrap1 = rndcoord(fillrect(01,01,73,16))
+$angeltrap2 = rndcoord(fillrect(01,01,73,16))
+$angeltrap3 = rndcoord(fillrect(01,01,73,16))
+$angeltrap4 = rndcoord(fillrect(01,01,73,16))
+$angeltrap5 = rndcoord(fillrect(01,01,73,16))
+TRAP:"statue",$angeltrap1
+OBJECT:"statue",$angeltrap1,montype:('A', "weeping angel")
+TRAP:"statue",$angeltrap2
+OBJECT:"statue",$angeltrap2,montype:('A', "weeping angel")
+TRAP:"statue",$angeltrap3
+OBJECT:"statue",$angeltrap3,montype:('A', "weeping angel")
+TRAP:"statue",$angeltrap4
+OBJECT:"statue",$angeltrap4,montype:('A', "weeping angel")
+TRAP:"statue",$angeltrap5
+OBJECT:"statue",$angeltrap5,montype:('A', "weeping angel")
+
+#Engravings
+ENGRAVING:(20,13),burn,"Don't blink. Blink and you're dead."
+
+#Doors
+DOOR:locked,(19,04)
+DOOR:locked,(20,12)
+DOOR:locked,(20,14)
+DOOR:locked,(50,11)
+DOOR:locked,(53,15)
+
+# Objects (and twice as many actual statues), themed for the level
+LOOP [5] {
+  OBJECT:('?',"light"),random,cursed
+  OBJECT:('!',"blindness"),random,cursed
+  OBJECT:"statue",random,montype:('A', "weeping angel")
+}
+
+GRAVE:(18,01),"Cleric Bob"
+OBJECT:('/',"lightning"),(18,01),buried,+3,recharged:1
+OBJECT:('(',"towel"),(20,15),blessed
+
+# Random monsters for the monster room.
+MONSTER:random,(45,14)
+MONSTER:random,(46,14)
+MONSTER:random,(47,14)
+MONSTER:random,(48,14)
+MONSTER:random,(49,14)
+MONSTER:random,(50,14)
+MONSTER:random,(51,14)
+MONSTER:random,(51,14)
+MONSTER:random,(45,15)
+MONSTER:random,(46,15)
+MONSTER:random,(47,15)
+MONSTER:random,(48,15)
+MONSTER:random,(49,15)
+MONSTER:random,(50,15)
+MONSTER:random,(51,15)
+MONSTER:random,(51,15)
+MONSTER:random,(45,16)
+MONSTER:random,(46,16)
+MONSTER:random,(47,16)
+MONSTER:random,(48,16)
+MONSTER:random,(49,16)
+MONSTER:random,(50,16)
+MONSTER:random,(51,16)
+MONSTER:random,(51,16)
