@@ -23,7 +23,7 @@ LEVEL:		"oracle" "O" @ (5, 5)
 LEVALIGN:	neutral
 CHAINBRANCH:	"Sokoban" "oracle" + (1, 0) up
 CHAINBRANCH:	"Town" "oracle" + (2, 2) up
-RNDLEVEL:	"bigrm" "B" @ (10, 3) 40 11
+RNDLEVEL:	"bigrm" "B" @ (10, 3) 40 12
 CHAINBRANCH:	"The Quest" "oracle" + (6, 2) portal
 BRANCH:		"Fort Ludios" @ (18, 4) portal
 LEVEL:		"nymph" "N" @ (5, 15) 45
