@@ -23,6 +23,7 @@
 
 	* new monsters:
 	  - locusts (from SporkHack)
+	  - weeping angels
 
 	* dungeon layout:
 	  - length of Town branch reduced and special filler level added
